# simple-jab-wrapper

./: Cargo.toml  README.md  build.rs  client.py  gen_schema.sh
.cargo/: config.toml
example-client/: jab_wrapper_pb2.py  jab_wrapper_pb2.pyi  jab_wrapper_pb2_grpc.py  main.py  pyproject.toml
native/: AccessBridgeCalls.c  wrapper.h
proto/: jab_wrapper.proto
src/: jab_api.rs  main.rs  main_temp.rs  protocol.rs  server.rs  types.rs
