[package]
name = "simple-jab-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.61"
