[package]
name = "simple-jab-wrapper"
version = "0.0.4"
edition = "2024"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.61"
tonic-build = { version = "0.12", features = ["prost"] }
